--- a/src_nlp/tensorflow/tf-estimator/word2vec_cbow.ipynb
+++ b/src_nlp/tensorflow/tf-estimator/word2vec_cbow.ipynb
@@ -13,7 +13,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import Counter\n",
     "\n",
@@ -35,7 +44,7 @@
     "    'embed_dim': 200,\n",
     "    'sample_words': ['six', 'gold', 'japan', 'college'],\n",
     "    'batch_size': 1000,\n",
-    "    'n_epochs': 20,\n",
+    "    'n_epochs': 10,\n",
     "}"
    ]
   },
@@ -100,7 +109,7 @@
     "    W = tf.get_variable('softmax_W', [PARAMS['vocab_size'], PARAMS['embed_dim']])\n",
     "    b = tf.get_variable('softmax_b', [PARAMS['vocab_size']])\n",
     "    E = tf.get_variable('embedding', [PARAMS['vocab_size'], PARAMS['embed_dim']])\n",
-    "    embedded = tf.nn.embedding_lookup(E, features) # forward activation\n",
+    "    embedded = tf.nn.embedding_lookup(E, features['x']) # forward activation\n",
     "    embedded = tf.reduce_mean(embedded, [1])\n",
     "    \n",
     "    if mode == tf.estimator.ModeKeys.TRAIN:\n",
@@ -119,7 +128,7 @@
     "    \n",
     "    if mode == tf.estimator.ModeKeys.PREDICT:\n",
     "        normalized_E = tf.nn.l2_normalize(E, -1)\n",
-    "        sample_E = tf.nn.embedding_lookup(normalized_E, features)\n",
+    "        sample_E = tf.nn.embedding_lookup(normalized_E, features['x'])\n",
     "        similarity = tf.matmul(sample_E, normalized_E, transpose_b=True)\n",
     "        \n",
     "        return tf.estimator.EstimatorSpec(mode, predictions=similarity)\n",
@@ -148,160 +157,99 @@
       "Vocabulary size: 9582\n",
       "Word preprocessing completed ...\n",
       "INFO:tensorflow:Using default config.\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: /var/folders/sx/fv0r97j96fz8njp14dt5g7940000gn/T/tmpuks8iym3\n",
-      "INFO:tensorflow:Using config: {'_model_dir': '/var/folders/sx/fv0r97j96fz8njp14dt5g7940000gn/T/tmpuks8iym3', '_tf_random_seed': None, '_save_summary_steps': 100, '_save_checkpoints_steps': None, '_save_checkpoints_secs': 600, '_session_config': None, '_keep_checkpoint_max': 5, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': 100, '_service': None, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x1132cb2b0>, '_task_type': 'worker', '_task_id': 0, '_global_id_in_cluster': 0, '_master': '', '_evaluation_master': '', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1}\n",
-      "WARNING:tensorflow:Estimator's model_fn (<function model_fn at 0x1132bd8c8>) includes params argument, but params are not passed to Estimator.\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: /var/folders/sx/fv0r97j96fz8njp14dt5g7940000gn/T/tmpjvjhv6s5\n",
+      "INFO:tensorflow:Using config: {'_model_dir': '/var/folders/sx/fv0r97j96fz8njp14dt5g7940000gn/T/tmpjvjhv6s5', '_tf_random_seed': None, '_save_summary_steps': 100, '_save_checkpoints_steps': None, '_save_checkpoints_secs': 600, '_session_config': None, '_keep_checkpoint_max': 5, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': 100, '_train_distribute': None, '_device_fn': None, '_service': None, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x11d6f5160>, '_task_type': 'worker', '_task_id': 0, '_global_id_in_cluster': 0, '_master': '', '_evaluation_master': '', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1}\n",
+      "WARNING:tensorflow:Estimator's model_fn (<function model_fn at 0x11d6fbea0>) includes params argument, but params are not passed to Estimator.\n",
       "INFO:tensorflow:Calling model_fn.\n",
-      "WARNING:tensorflow:From /usr/local/lib/python3.6/site-packages/tensorflow/python/ops/nn_impl.py:1346: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "\n",
-      "Future major versions of TensorFlow will allow gradients to flow\n",
-      "into the labels input on backprop by default.\n",
-      "\n",
-      "See tf.nn.softmax_cross_entropy_with_logits_v2.\n",
-      "\n",
       "INFO:tensorflow:Done calling model_fn.\n",
       "INFO:tensorflow:Create CheckpointSaverHook.\n",
       "INFO:tensorflow:Graph was finalized.\n",
       "INFO:tensorflow:Running local_init_op.\n",
       "INFO:tensorflow:Done running local_init_op.\n",
-      "INFO:tensorflow:Saving checkpoints for 1 into /var/folders/sx/fv0r97j96fz8njp14dt5g7940000gn/T/tmpuks8iym3/model.ckpt.\n",
-      "INFO:tensorflow:loss = 3.8350616, step = 1\n",
-      "INFO:tensorflow:global_step/sec: 40.7025\n",
-      "INFO:tensorflow:loss = 3.636289, step = 101 (2.458 sec)\n",
-      "INFO:tensorflow:global_step/sec: 39.3896\n",
-      "INFO:tensorflow:loss = 3.544359, step = 201 (2.538 sec)\n",
-      "INFO:tensorflow:global_step/sec: 42.0322\n",
-      "INFO:tensorflow:loss = 3.7118027, step = 301 (2.380 sec)\n",
-      "INFO:tensorflow:global_step/sec: 44.6294\n",
-      "INFO:tensorflow:loss = 3.478565, step = 401 (2.240 sec)\n",
-      "INFO:tensorflow:global_step/sec: 41.4182\n",
-      "INFO:tensorflow:loss = 3.0353925, step = 501 (2.414 sec)\n",
-      "INFO:tensorflow:global_step/sec: 47.126\n",
-      "INFO:tensorflow:loss = 3.5636275, step = 601 (2.122 sec)\n",
-      "INFO:tensorflow:global_step/sec: 39.8924\n",
-      "INFO:tensorflow:loss = 3.1482036, step = 701 (2.507 sec)\n",
-      "INFO:tensorflow:global_step/sec: 40.1808\n",
-      "INFO:tensorflow:loss = 3.3421412, step = 801 (2.489 sec)\n",
-      "INFO:tensorflow:global_step/sec: 36.6331\n",
-      "INFO:tensorflow:loss = 3.0614142, step = 901 (2.730 sec)\n",
-      "INFO:tensorflow:global_step/sec: 40.4399\n",
-      "INFO:tensorflow:loss = 2.7809231, step = 1001 (2.473 sec)\n",
-      "INFO:tensorflow:global_step/sec: 43.8506\n",
-      "INFO:tensorflow:loss = 3.7473638, step = 1101 (2.280 sec)\n",
-      "INFO:tensorflow:global_step/sec: 42.3958\n",
-      "INFO:tensorflow:loss = 3.2437446, step = 1201 (2.359 sec)\n",
-      "INFO:tensorflow:global_step/sec: 43.7953\n",
-      "INFO:tensorflow:loss = 2.8726132, step = 1301 (2.283 sec)\n",
-      "INFO:tensorflow:global_step/sec: 38.4877\n",
-      "INFO:tensorflow:loss = 3.0492775, step = 1401 (2.598 sec)\n",
-      "INFO:tensorflow:global_step/sec: 37.9712\n",
-      "INFO:tensorflow:loss = 2.548696, step = 1501 (2.634 sec)\n",
-      "INFO:tensorflow:global_step/sec: 43.5196\n",
-      "INFO:tensorflow:loss = 3.1152203, step = 1601 (2.297 sec)\n",
-      "INFO:tensorflow:global_step/sec: 44.3791\n",
-      "INFO:tensorflow:loss = 3.097227, step = 1701 (2.254 sec)\n",
-      "INFO:tensorflow:global_step/sec: 44.0748\n",
-      "INFO:tensorflow:loss = 3.764312, step = 1801 (2.269 sec)\n",
-      "INFO:tensorflow:global_step/sec: 41.915\n",
-      "INFO:tensorflow:loss = 3.4257622, step = 1901 (2.385 sec)\n",
-      "INFO:tensorflow:global_step/sec: 40.8742\n",
-      "INFO:tensorflow:loss = 2.9248288, step = 2001 (2.446 sec)\n",
-      "INFO:tensorflow:global_step/sec: 41.9666\n",
-      "INFO:tensorflow:loss = 3.0322022, step = 2101 (2.383 sec)\n",
-      "INFO:tensorflow:global_step/sec: 40.4418\n",
-      "INFO:tensorflow:loss = 2.6801634, step = 2201 (2.473 sec)\n",
-      "INFO:tensorflow:global_step/sec: 40.3394\n",
-      "INFO:tensorflow:loss = 3.1094692, step = 2301 (2.479 sec)\n",
-      "INFO:tensorflow:global_step/sec: 41.3432\n",
-      "INFO:tensorflow:loss = 2.4879048, step = 2401 (2.419 sec)\n",
-      "INFO:tensorflow:global_step/sec: 44.4895\n",
-      "INFO:tensorflow:loss = 3.0866075, step = 2501 (2.248 sec)\n",
-      "INFO:tensorflow:global_step/sec: 43.7445\n",
-      "INFO:tensorflow:loss = 2.580624, step = 2601 (2.286 sec)\n",
-      "INFO:tensorflow:global_step/sec: 42.9485\n",
-      "INFO:tensorflow:loss = 2.52849, step = 2701 (2.328 sec)\n",
-      "INFO:tensorflow:global_step/sec: 37.6309\n",
-      "INFO:tensorflow:loss = 2.4887617, step = 2801 (2.657 sec)\n",
-      "INFO:tensorflow:global_step/sec: 41.7951\n",
-      "INFO:tensorflow:loss = 2.324918, step = 2901 (2.392 sec)\n",
-      "INFO:tensorflow:global_step/sec: 40.9469\n",
-      "INFO:tensorflow:loss = 2.5941117, step = 3001 (2.442 sec)\n",
-      "INFO:tensorflow:global_step/sec: 41.1171\n",
-      "INFO:tensorflow:loss = 2.5638657, step = 3101 (2.432 sec)\n",
-      "INFO:tensorflow:global_step/sec: 41.7107\n",
-      "INFO:tensorflow:loss = 1.9251391, step = 3201 (2.397 sec)\n",
-      "INFO:tensorflow:global_step/sec: 41.1085\n",
-      "INFO:tensorflow:loss = 2.2546482, step = 3301 (2.432 sec)\n",
-      "INFO:tensorflow:global_step/sec: 44.6187\n",
-      "INFO:tensorflow:loss = 2.5781186, step = 3401 (2.241 sec)\n",
-      "INFO:tensorflow:global_step/sec: 40.8683\n",
-      "INFO:tensorflow:loss = 2.6886415, step = 3501 (2.447 sec)\n",
-      "INFO:tensorflow:global_step/sec: 37.0906\n",
-      "INFO:tensorflow:loss = 2.0682976, step = 3601 (2.696 sec)\n",
-      "INFO:tensorflow:global_step/sec: 37.0081\n",
-      "INFO:tensorflow:loss = 2.445887, step = 3701 (2.702 sec)\n",
-      "INFO:tensorflow:global_step/sec: 41.1656\n",
-      "INFO:tensorflow:loss = 2.5939693, step = 3801 (2.429 sec)\n",
-      "INFO:tensorflow:global_step/sec: 42.7482\n",
-      "INFO:tensorflow:loss = 2.655304, step = 3901 (2.339 sec)\n",
-      "INFO:tensorflow:global_step/sec: 39.7098\n",
-      "INFO:tensorflow:loss = 2.252564, step = 4001 (2.519 sec)\n",
-      "INFO:tensorflow:global_step/sec: 32.271\n",
-      "INFO:tensorflow:loss = 1.6980852, step = 4101 (3.098 sec)\n",
-      "INFO:tensorflow:global_step/sec: 40.6962\n",
-      "INFO:tensorflow:loss = 2.4039032, step = 4201 (2.457 sec)\n",
-      "INFO:tensorflow:global_step/sec: 42.0593\n",
-      "INFO:tensorflow:loss = 2.2756357, step = 4301 (2.377 sec)\n",
-      "INFO:tensorflow:global_step/sec: 40.2766\n",
-      "INFO:tensorflow:loss = 1.9164715, step = 4401 (2.483 sec)\n",
-      "INFO:tensorflow:global_step/sec: 43.4905\n",
-      "INFO:tensorflow:loss = 2.1856148, step = 4501 (2.299 sec)\n",
-      "INFO:tensorflow:global_step/sec: 42.8171\n",
-      "INFO:tensorflow:loss = 2.6216207, step = 4601 (2.336 sec)\n",
-      "INFO:tensorflow:global_step/sec: 40.6165\n",
-      "INFO:tensorflow:loss = 1.9581236, step = 4701 (2.462 sec)\n",
-      "INFO:tensorflow:global_step/sec: 38.0454\n",
-      "INFO:tensorflow:loss = 2.1972666, step = 4801 (2.628 sec)\n",
-      "INFO:tensorflow:global_step/sec: 41.7592\n",
-      "INFO:tensorflow:loss = 3.5713267, step = 4901 (2.395 sec)\n",
-      "INFO:tensorflow:global_step/sec: 42.3471\n",
-      "INFO:tensorflow:loss = 2.3030143, step = 5001 (2.361 sec)\n",
-      "INFO:tensorflow:global_step/sec: 47.7142\n",
-      "INFO:tensorflow:loss = 1.8831947, step = 5101 (2.096 sec)\n",
-      "INFO:tensorflow:global_step/sec: 47.6745\n",
-      "INFO:tensorflow:loss = 1.7045817, step = 5201 (2.098 sec)\n",
-      "INFO:tensorflow:global_step/sec: 44.1917\n",
-      "INFO:tensorflow:loss = 1.6338967, step = 5301 (2.263 sec)\n",
-      "INFO:tensorflow:Saving checkpoints for 5396 into /var/folders/sx/fv0r97j96fz8njp14dt5g7940000gn/T/tmpuks8iym3/model.ckpt.\n",
-      "INFO:tensorflow:Loss for final step: 1.7628521.\n",
+      "INFO:tensorflow:Saving checkpoints for 0 into /var/folders/sx/fv0r97j96fz8njp14dt5g7940000gn/T/tmpjvjhv6s5/model.ckpt.\n",
+      "INFO:tensorflow:loss = 3.5843213, step = 1\n",
+      "INFO:tensorflow:global_step/sec: 46.9561\n",
+      "INFO:tensorflow:loss = 3.7559571, step = 101 (2.130 sec)\n",
+      "INFO:tensorflow:global_step/sec: 49.8487\n",
+      "INFO:tensorflow:loss = 3.5779653, step = 201 (2.006 sec)\n",
+      "INFO:tensorflow:global_step/sec: 50.063\n",
+      "INFO:tensorflow:loss = 3.5439527, step = 301 (1.997 sec)\n",
+      "INFO:tensorflow:global_step/sec: 49.523\n",
+      "INFO:tensorflow:loss = 2.9269853, step = 401 (2.019 sec)\n",
+      "INFO:tensorflow:global_step/sec: 50.4256\n",
+      "INFO:tensorflow:loss = 2.8054752, step = 501 (1.983 sec)\n",
+      "INFO:tensorflow:global_step/sec: 49.6669\n",
+      "INFO:tensorflow:loss = 3.1015215, step = 601 (2.013 sec)\n",
+      "INFO:tensorflow:global_step/sec: 49.159\n",
+      "INFO:tensorflow:loss = 3.2989767, step = 701 (2.034 sec)\n",
+      "INFO:tensorflow:global_step/sec: 44.0945\n",
+      "INFO:tensorflow:loss = 3.3578064, step = 801 (2.268 sec)\n",
+      "INFO:tensorflow:global_step/sec: 45.8696\n",
+      "INFO:tensorflow:loss = 3.2208562, step = 901 (2.180 sec)\n",
+      "INFO:tensorflow:global_step/sec: 45.7902\n",
+      "INFO:tensorflow:loss = 3.5523255, step = 1001 (2.184 sec)\n",
+      "INFO:tensorflow:global_step/sec: 46.876\n",
+      "INFO:tensorflow:loss = 3.1657982, step = 1101 (2.133 sec)\n",
+      "INFO:tensorflow:global_step/sec: 47.6503\n",
+      "INFO:tensorflow:loss = 3.388936, step = 1201 (2.099 sec)\n",
+      "INFO:tensorflow:global_step/sec: 50.0243\n",
+      "INFO:tensorflow:loss = 3.6487749, step = 1301 (1.999 sec)\n",
+      "INFO:tensorflow:global_step/sec: 49.3021\n",
+      "INFO:tensorflow:loss = 2.6323447, step = 1401 (2.028 sec)\n",
+      "INFO:tensorflow:global_step/sec: 49.8968\n",
+      "INFO:tensorflow:loss = 3.0210733, step = 1501 (2.004 sec)\n",
+      "INFO:tensorflow:global_step/sec: 49.5221\n",
+      "INFO:tensorflow:loss = 3.1229134, step = 1601 (2.019 sec)\n",
+      "INFO:tensorflow:global_step/sec: 50.957\n",
+      "INFO:tensorflow:loss = 3.440561, step = 1701 (1.962 sec)\n",
+      "INFO:tensorflow:global_step/sec: 49.5455\n",
+      "INFO:tensorflow:loss = 3.1347473, step = 1801 (2.018 sec)\n",
+      "INFO:tensorflow:global_step/sec: 52.1922\n",
+      "INFO:tensorflow:loss = 3.2595341, step = 1901 (1.916 sec)\n",
+      "INFO:tensorflow:global_step/sec: 50.2213\n",
+      "INFO:tensorflow:loss = 2.5702322, step = 2001 (1.991 sec)\n",
+      "INFO:tensorflow:global_step/sec: 50.2411\n",
+      "INFO:tensorflow:loss = 3.0401607, step = 2101 (1.990 sec)\n",
+      "INFO:tensorflow:global_step/sec: 49.3129\n",
+      "INFO:tensorflow:loss = 3.030052, step = 2201 (2.028 sec)\n",
+      "INFO:tensorflow:global_step/sec: 49.6317\n",
+      "INFO:tensorflow:loss = 2.6948278, step = 2301 (2.015 sec)\n",
+      "INFO:tensorflow:global_step/sec: 49.0273\n",
+      "INFO:tensorflow:loss = 2.6145165, step = 2401 (2.040 sec)\n",
+      "INFO:tensorflow:global_step/sec: 49.3446\n",
+      "INFO:tensorflow:loss = 2.3987436, step = 2501 (2.027 sec)\n",
+      "INFO:tensorflow:global_step/sec: 49.6388\n",
+      "INFO:tensorflow:loss = 2.5045497, step = 2601 (2.015 sec)\n",
+      "INFO:tensorflow:Saving checkpoints for 2698 into /var/folders/sx/fv0r97j96fz8njp14dt5g7940000gn/T/tmpjvjhv6s5/model.ckpt.\n",
+      "INFO:tensorflow:Loss for final step: 2.3603628.\n",
       "INFO:tensorflow:Calling model_fn.\n",
       "INFO:tensorflow:Done calling model_fn.\n",
       "INFO:tensorflow:Graph was finalized.\n",
-      "INFO:tensorflow:Restoring parameters from /var/folders/sx/fv0r97j96fz8njp14dt5g7940000gn/T/tmpuks8iym3/model.ckpt-5396\n",
+      "INFO:tensorflow:Restoring parameters from /var/folders/sx/fv0r97j96fz8njp14dt5g7940000gn/T/tmpjvjhv6s5/model.ckpt-2698\n",
       "INFO:tensorflow:Running local_init_op.\n",
       "INFO:tensorflow:Done running local_init_op.\n",
-      "Nearest to [six]: insurance, both, page-one, hospital, focuses,\n",
-      "Nearest to [gold]: ounce, ounces, platinum, silver, bullion,\n",
-      "Nearest to [japan]: iron, snapped, unrest, opening, or,\n",
-      "Nearest to [college]: football, school, teaches, sports, basketball,\n"
+      "Nearest to [six]: ncnb, charlotte, pioneer, modifications, involves,\n",
+      "Nearest to [gold]: ounce, silver, platinum, bullion, ounces,\n",
+      "Nearest to [japan]: permits, ab, against, remainder, jeopardize,\n",
+      "Nearest to [college]: school, father, teaches, wonderful, done,\n"
      ]
     }
    ],
    "source": [
-    "with open('temp/ptb_train.txt') as f:\n",
+    "with open('../temp/ptb_train.txt') as f:\n",
     "    x_train, y_train = make_data(preprocess_text(f.read()))\n",
     "\n",
     "estimator = tf.estimator.Estimator(model_fn)\n",
     "\n",
     "estimator.train(tf.estimator.inputs.numpy_input_fn(\n",
-    "    x_train, np.expand_dims(y_train, -1),\n",
+    "    x = {'x': x_train},\n",
+    "    y = np.expand_dims(y_train, -1),\n",
     "    batch_size = PARAMS['batch_size'],\n",
     "    num_epochs = PARAMS['n_epochs'],\n",
     "    shuffle = True))\n",
     "\n",
     "sim = np.array(list(estimator.predict(tf.estimator.inputs.numpy_input_fn(\n",
-    "    x = np.array([PARAMS['word2idx'][w] for w in PARAMS['sample_words']]),\n",
+    "    x = {'x': np.array([PARAMS['word2idx'][w] for w in PARAMS['sample_words']])},\n",
     "    shuffle = False))))\n",
     "\n",
     "print_neighbours(sim)"
